# AWS_Parallel_Distribution_System

./: README.md  app.py  db_setup.py  dbsetup.py  insertProducts.py  pyproject.toml
configurationfileforsetup/: tmeas.service.backup  tmeas_website_nginx.backup
templates/: confirm.html  index.html
