[project]
name = "tmeas-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.6",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pymysql>=1.1.2",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "werkzeug>=3.1.4",
]
